--- a/lightning-wallet-app/package.json
+++ b/lightning-wallet-app/package.json
@@ -5,10 +5,20 @@
   "private": true,
   "scripts": {
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
-    "build:web": "expo export --platform web",
-    "lint": "expo lint"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "android:dev": "expo run:android --device",
+    "ios:dev": "expo run:ios --device",
+    "web": "expo start --web",
+    "deploy": "npx expo export -p web && npx eas-cli@latest deploy",
+    "tunnel": "npx expo start --tunnel -c",
+    "doc-fix": "npx expo install --check",
+    "export:web": "npx expo export -p web",
+    "deploy:web": "eas deploy --prod"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^14.1.0",
     "@lightninglabs/lnc-rn": "^0.3.2-alpha",
     "@lucide/lab": "^0.1.2",
@@ -24,6 +34,7 @@
     "expo-linear-gradient": "~14.1.3",
     "expo-linking": "~7.1.3",
     "expo-router": "~5.0.2",
+    "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.6",
     "expo-status-bar": "~2.2.2",
     "expo-symbols": "~0.4.3",
@@ -33,7 +44,6 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.1",
-    "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.3.0",
