using axum? might be better to use actix

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,12 @@
-DATABASE_URL=postgresql://postgres:password@localhost:5432/taproot_assets
-TAPD_GRPC_HOST=localhost:10029
-TAPD_TLS_CERT_PATH=/path/to/tapd/tls.cert
-TAPD_MACAROON_PATH=/path/to/tapd/admin.macaroon
+# Database
+DATABASE_URL=postgresql://user:password@localhost:5432/lightning_app
+
+# Server Configuration
 SERVER_HOST=0.0.0.0
-SERVER_PORT=3000
+SERVER_PORT=3001
+
+# Taproot Assets Gateway
+TAPROOT_GATEWAY_URL=http://127.0.0.1:8080
+
+# Logging
 RUST_LOG=info
