--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,15 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.7"
+axum = { version = "0.7", features = ["ws"] }
 tokio = { version = "1.0", features = ["full"] }
 tower = "0.4"
 tower-http = { version = "0.5", features = ["cors", "trace"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
-tonic = "0.12"
-prost = "0.13"
+sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "sqlite", "migrate"] }
+reqwest = { version = "0.12", features = ["json", "blocking"] }
 uuid = { version = "1.0", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 tracing = "0.1"
@@ -21,6 +20,20 @@ anyhow = "1.0"
 thiserror = "1.0"
 clap = { version = "4.0", features = ["derive"] }
 dotenv = "0.15"
+hex = "0.4"
+futures = "0.3"
+futures-util = "0.3"
+lazy_static = "1.5"
+urlencoding = "2.1"
+base64 = "0.22"
+secp256k1 = { version = "0.29", features = ["recovery", "serde", "rand"] }
+bitcoin = "0.32"
+sha2 = "0.10"
+redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
+url = "2.5"
+tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
+native-tls = "0.2"
+async-trait = "0.1"
+tempfile = "3.8"
+hyper = "1.0"
 
-[build-dependencies]
-tonic-build = "0.12"
